--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
   rxdart: ^0.28.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
